[package]
name = "ptouch"
repository = "https://github.com/ryankurte/rust-ptouch"
description = "Brother PTouch label maker driver and utility"
keywords = ["ptouch", "label", "print", "driver"]
readme = "README.md"
version = "0.2.2"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"
license = "MPL-2.0"

[features]
util = ["toml", "structopt", "strum", "serde", "dep:simplelog"]
preview = ["dep:embedded-graphics-simulator"]
default = ["util", "preview", "anyhow"]
render = [
    "dep:qrcode",
    "dep:datamatrix",
    "dep:image",
    "dep:barcoders",
    "dep:embedded-graphics",
    "dep:embedded-text",
    "dep:embedded-graphics-simulator",
]
strum = ["dep:strum", "dep:strum_macros"]

[dependencies]
structopt = { version = "0.3.21", optional = true }
rusb = "0.9.1"
lazy_static = "1.4.0"
log = "0.4.13"
bitfield = "0.19.1"
bitflags = "2.9.2"
strum = { version = "0.27.2", optional = true }
strum_macros = { version = "0.27.2", optional = true }
anyhow = { version = "1.0.99", optional = true }

simplelog = { version = "0.12.0", optional = true }
qrcode = { version = "0.14.1", optional = true }
datamatrix = { version = "0.3.1", optional = true }
image = { version = "0.25.6", optional = true }
barcoders = { version = "2.0.0", optional = true }

thiserror = "2.0.16"

embedded-graphics = { version = "0.8.1", optional = true }
embedded-text = { version = "0.7.2", optional = true }
# TODO: make preview optional
embedded-graphics-simulator = { version = "0.7.0", optional = true }

serde = { version = "1.0.123", features = ["derive"], optional = true }
toml = { version = "0.9.5", optional = true }

[[bin]]
name = "ptouch-util"
path = "src/util.rs"
required-features = ["util", "render"]
